commit fix warning

--- a/tuanla4_oop/.settings/org.eclipse.core.resources.prefs
+++ b/tuanla4_oop/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,7 @@
 eclipse.preferences.version=1
+encoding//src/java8/lab2/Movie.java=UTF-8
+encoding//src/java8/lab4/ListNumber.java=UTF-8
+encoding//src/java8/lab6/OptionalMain.java=UTF-8
 encoding//src/oop/MenuCrud.java=UTF-8
 encoding//src/oop/MenuOopPolymorphism.java=UTF-8
 encoding//src/oop/Person.java=UTF-8
